[ 11/22/24 ]
New and working alert system.
- Saves collapse of system and message.
- Right click to hide system for rest of session (per Lua load).
- Shows items in changeLog per mod.
[ ------ ]

[ 11/22/24 #2 ]
- Shifted UI for collapsed alert over a bit.
- Added message-header to translatable text.
[ ------ ]

[ 11/24/24 ]
- Fixes edge case with update logs.
[ ------ ]